deploy_client.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: client-deployment
  namespace: mongodb
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: 023748615325.dkr.ecr.us-east-1.amazonaws.com/partner-meanstack-atlas-eks-client:latest # specify your ECR repository
        ports:
        - containerPort: 8080
        resources:
            limits:
              cpu: 500m
            requests:
              cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: mongodb
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080
  type: NodePort # expose the service as NodePort type so that ALB can use it later.
