deploy_nlb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mongodb
  name: server-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-005dc0a8a96b00887, subnet-0cf7a392f5d7c816b, subnet-050016e27b85e0723 # specifying the public subnets id
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - port: 5200
      protocol: TCP
      targetPort: 5200
      name: server
  selector:
    app: server
